CardPaymentControllerTest and CreateCardPaymentUseCaseImplTest

--- a/infra/src/main/resources/application.properties
+++ b/infra/src/main/resources/application.properties
@@ -1,13 +1,3 @@
 #quarkus configs
 quarkus.http.root-path=/api
-
-#hibernate configs
-quarkus.hibernate-orm.database.generation=drop-and-create
-quarkus.hibernate-orm.log.format-sql=true
-quarkus.hibernate-orm.log.sql=true
-quarkus.hibernate-orm.sql-load-script=import.sql
-
-#postgres configs
-quarkus.datasource.username=postgres
-quarkus.datasource.password=sa
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/cardapp
+quarkus.container-image.build=true
