--- a/core/pom.xml
+++ b/core/pom.xml
@@ -15,6 +15,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <lombook.version>1.18.30</lombook.version>
         <jackson.version>2.17.2</jackson.version>
+        <junit.version>5.10.1</junit.version>
     </properties>
 
     <dependencies>
@@ -41,6 +42,18 @@
             <artifactId>maven-shared-utils</artifactId>
             <version>3.4.2</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.12.0</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
