--- a/infra/Dockerfile.jvm
+++ b/infra/Dockerfile.jvm
@@ -1,17 +1,17 @@
 ####
-# This Dockerfile is used in order to build a container that runs the Quarkus application in JVM mode
+# This Dockerfile.jvm is used in order to build a container that runs the Quarkus application in JVM mode
 #
 # Before building the container image run:
 #
-# ./mvnw package -Dquarkus.package.jar.type=legacy-jar
+# ./mvnw package
 #
 # Then, build the image with:
 #
-# docker build -f src/main/docker/Dockerfile.legacy-jar -t quarkus/card-app-legacy-jar .
+# docker build -f infra/Dockerfile.jvm -t quarkus/card-app-jvm .
 #
 # Then run the container using:
 #
-# docker run -i --rm -p 8080:8080 quarkus/card-app-legacy-jar
+# docker run -i --rm -p 8080:8080 quarkus/card-app-jvm
 #
 # If you want to include the debug port into your docker image
 # you will have to expose the debug port (default 5005 being the default) like this :  EXPOSE 8080 5005.
@@ -20,7 +20,7 @@
 #
 # Then run the container using :
 #
-# docker run -i --rm -p 8080:8080 quarkus/card-app-legacy-jar
+# docker run -i --rm -p 8080:8080 quarkus/card-app-jvm
 #
 # This image uses the `run-java.sh` script to run the application.
 # This scripts computes the command line to execute your Java application, and
@@ -79,11 +79,13 @@
 ###
 FROM registry.access.redhat.com/ubi8/openjdk-17:1.19
 
-ENV LANGUAGE='en_US:en'
+ENV LANGUAGE='pt_BR:pt'
 
-
-COPY target/lib/* /deployments/lib/
-COPY target/*-runner.jar /deployments/quarkus-run.jar
+# We make four distinct layers so if there are application changes the library layers can be re-used
+COPY --chown=185 target/quarkus-app/lib/ /deployments/lib/
+COPY --chown=185 target/quarkus-app/*.jar /deployments/
+COPY --chown=185 target/quarkus-app/app/ /deployments/app/
+COPY --chown=185 target/quarkus-app/quarkus/ /deployments/quarkus/
 
 EXPOSE 8080
 USER 185
@@ -91,3 +93,4 @@ ENV JAVA_OPTS_APPEND="-Dquarkus.http.host=0.0.0.0 -Djava.util.logging.manager=or
 ENV JAVA_APP_JAR="/deployments/quarkus-run.jar"
 
 ENTRYPOINT [ "/opt/jboss/container/java/run/run-java.sh" ]
+
